--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,13 @@
 Сделано:
 - Сделать http шлюз: done
+- Гет таск, апдейт, делит сделать через кверю
+- пофиксить null в невалидном ответе апи шлюза (не было return в некоторых обработчиках ошибки)
 
 
 Нужно:
-- Гет таск, апдейт, делит сделать через кверю
-- Добавить номральную БД
 - Добавить openApi доку
 - Добавить валидацию в ручки
+- Добавить номральную БД
 
 
 Баги:
-- пофиксить null в невалидном ответе апи шлюза
