--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,7 @@
 
 
 Нужно:
-- Добавить openApi доку
+- Добавить openApi доку (попробовать либу swaggo)
 - Добавить валидацию в ручки
 - Добавить номральную БД
 
