--- a/TODO.txt
+++ b/TODO.txt
@@ -2,12 +2,14 @@
 - Сделать http шлюз: done
 - Гет таск, апдейт, делит сделать через кверю
 - пофиксить null в невалидном ответе апи шлюза (не было return в некоторых обработчиках ошибки)
+- Добавить openApi доку (попробовать либу swaggo) - swagger 2.0 swaggo
 
 
 Нужно:
-- Добавить openApi доку (попробовать либу swaggo)
 - Добавить валидацию в ручки
 - Добавить номральную БД
+- Добавить мейкфайл:
+    1) генерация сваггера swag init -g cmd/gateway/main.go
 
 
 Баги:
