validation for http

--- a/TODO.txt
+++ b/TODO.txt
@@ -19,11 +19,17 @@ protoc \
   --validate_out=paths=source_relative:internal/task/pb \
   proto/task.proto
 
+UPD: Добавлена первичная алидация на http ручки. Нужно добавить валидацию на grpc логику
+Валдиацию можно оставить прямо в ручке, можно вынести в отдельный файл на том же уровне.
+Можно сделать отдельным пакетом и в ручке использовать иньекцию этого пакета, но кажется излишне
+
 
 Нужно:
 - Добавить номральную БД
 - Добавить мейкфайл:
     1) генерация сваггера swag init -g cmd/gateway/main.go
+    2) Генерация прото (сами ручки + валдация - наверно одно и то же)
+- Попробовать разбить на слои: транспорт, бизнес, ...
 
 
 Баги:
