--- a/TODO.txt
+++ b/TODO.txt
@@ -3,29 +3,26 @@
 - Гет таск, апдейт, делит сделать через кверю
 - пофиксить null в невалидном ответе апи шлюза (не было return в некоторых обработчиках ошибки)
 - Добавить openApi доку (попробовать либу swaggo) - swagger 2.0 swaggo
+- Добавить валидацию в ручки
+    Команда для генерации (убрать в task.proto корневую папку в импорте proto/)
+    protoc \
+      --proto_path=proto \
+      --go_out=internal/task/pb \
+      --go_opt=paths=source_relative \
+      --go-grpc_out=internal/task/pb \
+      --go-grpc_opt=paths=source_relative \
+      --validate_out=paths=source_relative:internal/task/pb \
+      proto/task.proto
+
+    UPD: Добавлена первичная алидация на http ручки.
+    UPD2: Добавлена валидация на ручку CreateTask остальным ручкам достаточно валидации на стороне шлюза
 
 
 В работе:
-- Добавить валидацию в ручки
-Базовые проверки на наличие поля (если такая нужна, наверно не нужна - протестить) в прото, более сложные в хендлере (может вынести в отдельный метод)
-Другую валидацию выносим вне бизнес логики
-Команда для генерации (убрать в task.proto корневую папку в импорте proto/)
-protoc \
-  --proto_path=proto \
-  --go_out=internal/task/pb \
-  --go_opt=paths=source_relative \
-  --go-grpc_out=internal/task/pb \
-  --go-grpc_opt=paths=source_relative \
-  --validate_out=paths=source_relative:internal/task/pb \
-  proto/task.proto
-
-UPD: Добавлена первичная алидация на http ручки. Нужно добавить валидацию на grpc логику
-Валдиацию можно оставить прямо в ручке, можно вынести в отдельный файл на том же уровне.
-Можно сделать отдельным пакетом и в ручке использовать иньекцию этого пакета, но кажется излишне
+- Добавить номральную БД (постгрес)
 
 
 Нужно:
-- Добавить номральную БД
 - Добавить мейкфайл:
     1) генерация сваггера swag init -g cmd/gateway/main.go
     2) Генерация прото (сами ручки + валдация - наверно одно и то же)
