--- a/TODO.txt
+++ b/TODO.txt
@@ -19,7 +19,7 @@
 
 
 В работе:
-- Добавить номральную БД (постгрес)
+- Добавить номральную БД (постгрес) - запуск brew services start postgresql@14, стоп такой же
 
 
 Нужно:
