--- a/TODO.txt
+++ b/TODO.txt
@@ -20,6 +20,7 @@
 
 В работе:
 - Добавить номральную БД (постгрес) - запуск brew services start postgresql@14, стоп такой же
+Реализовал миграции + метод создания задачи, добавить остальные методы
 
 
 Нужно:
