--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 Сделано:
-- Сделать http шлюз: done
+- Сделать http шлюз
 - Гет таск, апдейт, делит сделать через кверю
 - пофиксить null в невалидном ответе апи шлюза (не было return в некоторых обработчиках ошибки)
 - Добавить openApi доку (попробовать либу swaggo) - swagger 2.0 swaggo
@@ -23,6 +23,17 @@
 
 
 В работе:
+  Разбиение на слои:
+    Domain:
+      - Сущность задачи
+      - Методы по работе с задачами (обновление/создание/мб валидация?)
+    Application:
+      - Юз кейсы (круд задач с использованием репозитория + интерфейс репозитория)
+    Adapters:
+      - репозиторий
+      - grpc (api методы)
+    Infrastracture:
+      - main с инитом всех сущностей
 
 
 
