--- a/TODO.txt
+++ b/TODO.txt
@@ -20,10 +20,7 @@
 - Добавить мейкфайл:
     1) генерация сваггера swag init -g cmd/gateway/main.go
     2) Генерация прото (сами ручки + валдация - наверно одно и то же)
-
-
-В работе:
-  Разбиение на слои:
+- Разбиение на слои:
     Domain:
       - Сущность задачи
       - Методы по работе с задачами (обновление/создание/мб валидация?)
@@ -34,6 +31,13 @@
       - grpc (api методы)
     Infrastracture:
       - main с инитом всех сущностей
+
+    Удалить предыдщуие папки("слои"), запустить пг, запустить сервис и протестить
+
+
+В работе:
+  - Доработать аргументы методов шлюза и открыть репу
+  - Написать пару тестов с помощью testify
 
 
 
