--- a/TODO.txt
+++ b/TODO.txt
@@ -33,10 +33,10 @@
       - main с инитом всех сущностей
 
     Удалить предыдщуие папки("слои"), запустить пг, запустить сервис и протестить
+    Доработать аргументы методов шлюза и открыть репу
 
 
 В работе:
-  - Доработать аргументы методов шлюза и открыть репу
   - Написать пару тестов с помощью testify
 
 
